fixed list overflow

--- a/css/drinks.css
+++ b/css/drinks.css
@@ -4,18 +4,19 @@ body {
   font-family: "Cormorant Garamond", serif;
   font-weight: 300;
   font-style: normal;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .hero {
   background-image: url(../assets/Tequila\ Bartender.jpg);
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .list {
@@ -37,7 +38,7 @@ body {
 
 .container {
   width: 100%;
-  height: auto;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
   margin: 20px 0;
@@ -71,10 +72,13 @@ body {
   flex-direction: column;
 }
 
+ul {
+  width: 100%;
+  height: 100%;
+}
+
 li {
   font-size: 1.5rem;
-  margin: 0;
-  padding: 0;
 }
 
 .bold {
@@ -91,36 +95,35 @@ li {
   .picture img {
     width: 80%;
     height: auto;
+    margin: 0;
+    padding: 0;
   }
 }
 
 @media only screen and (max-width: 400px) {
-  .picture {
-    padding: 0 0 15px 0;
-  }
-
-  .picture img {
-    width: 90%;
-    height: auto;
-  }
-
   .container {
+    width: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    padding: 15px 0 0 0;
-    height: 100%;
     box-sizing: border-box;
   }
 
-  .description {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    justify-content: start;
+  .container .description ul {
+    box-sizing: border-box;
   }
 
-  .bold {
+  .name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
-    padding: 0 15px;
+    text-align: center;
+    width: 100%;
+  }
+
+  .name p {
+    width: 100%;
+    padding: 10px 10px 0 10px;
+    text-align: center;
   }
 }
